--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div class="wrapper">
     <!-- Wheelbarrow -->
-    <div id="wheelbarrow"></div>
-    <div id="wheelbarrow-foreground"></div>
+    <div class="wheelbarrow" id="wheelbarrow"></div>
+    <div class="wheelbarrow-foreground" id="wheelbarrow-foreground"></div>
 
 
     <!-- Kitties -->
@@ -30,7 +30,7 @@
     
 
   </div><!-- .wrapper -->
-  <audio id="player1">
+  <audio  id="player1">
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
   </audio>
